# sea-hmi-demo

./: .gitignore  README.md
cpp-simulator/: CMakeLists.txt  CMakePresets.json
cpp-simulator/src/: main.cpp
csharp-hmi/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  SeaHmiDemo.csproj
